[tool.poetry]
name = "truthbrush"
version = "0.3.0"
description = "API client for Truth Social"
authors = ["R. Miles McCain <github@sendmiles.email>", "David Thiel"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.scripts]
truthbrush = "truthbrush.cli:cli"

[tool.poetry.dependencies]
python = "^3.14"
click = "^8.3.0"
loguru = "^0.7.3"
python-dotenv = "^1.2.0"

python-dateutil = "^2.9.0"
curl_cffi = "^0.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
ruff = "^0.15.0"
ty = ">=0.0.31,<1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ty.rules]
unresolved-import = "warn"
